--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -2020,18 +2020,492 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 328,
    "id": "432a896a-c20c-455b-be77-906d95d3377d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+      "[nltk_data]     C:\\Users\\Yashasvi\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger_eng.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 328,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Parts of Speech bagging"
+    "# Parts of Speech bagging\n",
+    "nltk.download('averaged_perceptron_tagger_eng')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "id": "53a57fbb-d953-4363-b8a7-736a6e5803c3",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('I', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('three', 'CD'),\n",
+       " ('visions', 'NNS'),\n",
+       " ('for', 'IN'),\n",
+       " ('India', 'NNP'),\n",
+       " ('.', '.'),\n",
+       " ('In', 'IN'),\n",
+       " ('3000', 'CD'),\n",
+       " ('years', 'NNS'),\n",
+       " ('of', 'IN'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('history', 'NN'),\n",
+       " (',', ','),\n",
+       " ('people', 'NNS'),\n",
+       " ('from', 'IN'),\n",
+       " ('all', 'DT'),\n",
+       " ('over', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('world', 'NN'),\n",
+       " ('have', 'VBP'),\n",
+       " ('come', 'VBN'),\n",
+       " ('and', 'CC'),\n",
+       " ('invaded', 'VBN'),\n",
+       " ('us', 'PRP'),\n",
+       " (',', ','),\n",
+       " ('captured', 'VBD'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('lands', 'NNS'),\n",
+       " (',', ','),\n",
+       " ('conquered', 'VBD'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('minds', 'NNS'),\n",
+       " ('.', '.'),\n",
+       " ('From', 'IN'),\n",
+       " ('Alexander', 'NNP'),\n",
+       " ('onwards', 'NNS'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('Greeks', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('Turks', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('Moguls', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('Portuguese', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('British', 'JJ'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('French', 'JJ'),\n",
+       " (',', ','),\n",
+       " ('the', 'DT'),\n",
+       " ('Dutch', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('all', 'DT'),\n",
+       " ('of', 'IN'),\n",
+       " ('them', 'PRP'),\n",
+       " ('came', 'VBD'),\n",
+       " ('and', 'CC'),\n",
+       " ('looted', 'VBD'),\n",
+       " ('us', 'PRP'),\n",
+       " (',', ','),\n",
+       " ('took', 'VBD'),\n",
+       " ('over', 'RP'),\n",
+       " ('what', 'WP'),\n",
+       " ('was', 'VBD'),\n",
+       " ('ours', 'RB'),\n",
+       " ('.', '.'),\n",
+       " ('Yet', 'CC'),\n",
+       " ('we', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('done', 'VBN'),\n",
+       " ('this', 'DT'),\n",
+       " ('to', 'TO'),\n",
+       " ('any', 'DT'),\n",
+       " ('other', 'JJ'),\n",
+       " ('nation', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('We', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('conquered', 'VBN'),\n",
+       " ('anyone', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('We', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('grabbed', 'VBN'),\n",
+       " ('their', 'PRP$'),\n",
+       " ('land', 'NN'),\n",
+       " (',', ','),\n",
+       " ('their', 'PRP$'),\n",
+       " ('culture', 'NN'),\n",
+       " (',', ','),\n",
+       " ('their', 'PRP$'),\n",
+       " ('history', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('tried', 'VBD'),\n",
+       " ('to', 'TO'),\n",
+       " ('enforce', 'VB'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('way', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('life', 'NN'),\n",
+       " ('on', 'IN'),\n",
+       " ('them', 'PRP'),\n",
+       " ('.', '.'),\n",
+       " ('Why', 'WRB'),\n",
+       " ('?', '.'),\n",
+       " ('Because', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('respect', 'VBP'),\n",
+       " ('the', 'DT'),\n",
+       " ('freedom', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('others.That', 'WP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('why', 'WRB'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('first', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('that', 'IN'),\n",
+       " ('of', 'IN'),\n",
+       " ('freedom', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('I', 'PRP'),\n",
+       " ('believe', 'VBP'),\n",
+       " ('that', 'IN'),\n",
+       " ('India', 'NNP'),\n",
+       " ('got', 'VBD'),\n",
+       " ('its', 'PRP$'),\n",
+       " ('first', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('this', 'DT'),\n",
+       " ('in', 'IN'),\n",
+       " ('1857', 'CD'),\n",
+       " (',', ','),\n",
+       " ('when', 'WRB'),\n",
+       " ('we', 'PRP'),\n",
+       " ('started', 'VBD'),\n",
+       " ('the', 'DT'),\n",
+       " ('War', 'NNP'),\n",
+       " ('of', 'IN'),\n",
+       " ('Independence', 'NNP'),\n",
+       " ('.', '.'),\n",
+       " ('It', 'PRP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('this', 'DT'),\n",
+       " ('freedom', 'NN'),\n",
+       " ('that', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('must', 'MD'),\n",
+       " ('protect', 'VB'),\n",
+       " ('and', 'CC'),\n",
+       " ('nurture', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('build', 'VB'),\n",
+       " ('on', 'IN'),\n",
+       " ('.', '.'),\n",
+       " ('If', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('are', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('free', 'JJ'),\n",
+       " (',', ','),\n",
+       " ('no', 'DT'),\n",
+       " ('one', 'NN'),\n",
+       " ('will', 'MD'),\n",
+       " ('respect', 'VB'),\n",
+       " ('us', 'PRP'),\n",
+       " ('.', '.'),\n",
+       " ('My', 'PRP$'),\n",
+       " ('second', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('for', 'IN'),\n",
+       " ('India', 'NNP'),\n",
+       " ('’', 'NNP'),\n",
+       " ('s', 'NN'),\n",
+       " ('development', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('For', 'IN'),\n",
+       " ('fifty', 'JJ'),\n",
+       " ('years', 'NNS'),\n",
+       " ('we', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('been', 'VBN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developing', 'VBG'),\n",
+       " ('nation', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('It', 'PRP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('time', 'NN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('see', 'VBP'),\n",
+       " ('ourselves', 'PRP'),\n",
+       " ('as', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developed', 'JJ'),\n",
+       " ('nation', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('We', 'PRP'),\n",
+       " ('are', 'VBP'),\n",
+       " ('among', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('top', 'JJ'),\n",
+       " ('5', 'CD'),\n",
+       " ('nations', 'NNS'),\n",
+       " ('of', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('world', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('terms', 'NNS'),\n",
+       " ('of', 'IN'),\n",
+       " ('GDP', 'NNP'),\n",
+       " ('.', '.'),\n",
+       " ('We', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('a', 'DT'),\n",
+       " ('10', 'CD'),\n",
+       " ('percent', 'NN'),\n",
+       " ('growth', 'NN'),\n",
+       " ('rate', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('most', 'JJS'),\n",
+       " ('areas', 'NNS'),\n",
+       " ('.', '.'),\n",
+       " ('Our', 'PRP$'),\n",
+       " ('poverty', 'NN'),\n",
+       " ('levels', 'NNS'),\n",
+       " ('are', 'VBP'),\n",
+       " ('falling', 'VBG'),\n",
+       " ('.', '.'),\n",
+       " ('Our', 'PRP$'),\n",
+       " ('achievements', 'NNS'),\n",
+       " ('are', 'VBP'),\n",
+       " ('being', 'VBG'),\n",
+       " ('globally', 'RB'),\n",
+       " ('recognised', 'VBN'),\n",
+       " ('today', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('Yet', 'CC'),\n",
+       " ('we', 'PRP'),\n",
+       " ('lack', 'VBP'),\n",
+       " ('the', 'DT'),\n",
+       " ('self-confidence', 'NN'),\n",
+       " ('to', 'TO'),\n",
+       " ('see', 'VB'),\n",
+       " ('ourselves', 'PRP'),\n",
+       " ('as', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developed', 'JJ'),\n",
+       " ('nation', 'NN'),\n",
+       " (',', ','),\n",
+       " ('self-reliant', 'JJ'),\n",
+       " ('and', 'CC'),\n",
+       " ('self-assured', 'JJ'),\n",
+       " ('.', '.'),\n",
+       " ('Isn', 'NNP'),\n",
+       " ('’', 'NNP'),\n",
+       " ('t', 'NN'),\n",
+       " ('this', 'DT'),\n",
+       " ('incorrect', 'NN'),\n",
+       " ('?', '.'),\n",
+       " ('I', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('a', 'DT'),\n",
+       " ('third', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('India', 'NNP'),\n",
+       " ('must', 'MD'),\n",
+       " ('stand', 'VB'),\n",
+       " ('up', 'RP'),\n",
+       " ('to', 'TO'),\n",
+       " ('the', 'DT'),\n",
+       " ('world', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('Because', 'IN'),\n",
+       " ('I', 'PRP'),\n",
+       " ('believe', 'VBP'),\n",
+       " ('that', 'IN'),\n",
+       " ('unless', 'IN'),\n",
+       " ('India', 'NNP'),\n",
+       " ('stands', 'VBZ'),\n",
+       " ('up', 'RP'),\n",
+       " ('to', 'TO'),\n",
+       " ('the', 'DT'),\n",
+       " ('world', 'NN'),\n",
+       " (',', ','),\n",
+       " ('no', 'DT'),\n",
+       " ('one', 'NN'),\n",
+       " ('will', 'MD'),\n",
+       " ('respect', 'VB'),\n",
+       " ('us', 'PRP'),\n",
+       " ('.', '.'),\n",
+       " ('Only', 'RB'),\n",
+       " ('strength', 'NN'),\n",
+       " ('respects', 'NNS'),\n",
+       " ('strength', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('We', 'PRP'),\n",
+       " ('must', 'MD'),\n",
+       " ('be', 'VB'),\n",
+       " ('strong', 'JJ'),\n",
+       " ('not', 'RB'),\n",
+       " ('only', 'RB'),\n",
+       " ('as', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('military', 'JJ'),\n",
+       " ('power', 'NN'),\n",
+       " ('but', 'CC'),\n",
+       " ('also', 'RB'),\n",
+       " ('as', 'IN'),\n",
+       " ('an', 'DT'),\n",
+       " ('economic', 'JJ'),\n",
+       " ('power', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('Both', 'DT'),\n",
+       " ('must', 'MD'),\n",
+       " ('go', 'VB'),\n",
+       " ('hand-in-hand', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('My', 'PRP$'),\n",
+       " ('good', 'JJ'),\n",
+       " ('fortune', 'NN'),\n",
+       " ('was', 'VBD'),\n",
+       " ('to', 'TO'),\n",
+       " ('have', 'VB'),\n",
+       " ('worked', 'VBN'),\n",
+       " ('with', 'IN'),\n",
+       " ('three', 'CD'),\n",
+       " ('great', 'JJ'),\n",
+       " ('minds', 'NNS'),\n",
+       " ('.', '.'),\n",
+       " ('Dr.', 'NNP'),\n",
+       " ('Vikram', 'NNP'),\n",
+       " ('Sarabhai', 'NNP'),\n",
+       " ('of', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('Dept', 'NNP'),\n",
+       " ('.', '.'),\n",
+       " ('of', 'IN'),\n",
+       " ('space', 'NN'),\n",
+       " (',', ','),\n",
+       " ('Professor', 'NNP'),\n",
+       " ('Satish', 'NNP'),\n",
+       " ('Dhawan', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('who', 'WP'),\n",
+       " ('succeeded', 'VBD'),\n",
+       " ('him', 'PRP'),\n",
+       " ('and', 'CC'),\n",
+       " ('Dr.', 'NNP'),\n",
+       " ('Brahm', 'NNP'),\n",
+       " ('Prakash', 'NNP'),\n",
+       " (',', ','),\n",
+       " ('father', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('nuclear', 'JJ'),\n",
+       " ('material', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('I', 'PRP'),\n",
+       " ('was', 'VBD'),\n",
+       " ('lucky', 'JJ'),\n",
+       " ('to', 'TO'),\n",
+       " ('have', 'VB'),\n",
+       " ('worked', 'VBN'),\n",
+       " ('with', 'IN'),\n",
+       " ('all', 'DT'),\n",
+       " ('three', 'CD'),\n",
+       " ('of', 'IN'),\n",
+       " ('them', 'PRP'),\n",
+       " ('closely', 'RB'),\n",
+       " ('and', 'CC'),\n",
+       " ('consider', 'VB'),\n",
+       " ('this', 'DT'),\n",
+       " ('the', 'DT'),\n",
+       " ('great', 'JJ'),\n",
+       " ('opportunity', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('life', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('I', 'PRP'),\n",
+       " ('see', 'VBP'),\n",
+       " ('four', 'CD'),\n",
+       " ('milestones', 'NNS'),\n",
+       " ('in', 'IN'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('career', 'NN')]"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.pos_tag(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "id": "83a55625-f1bc-4191-9d84-55fbbbc3e80d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('i', 'JJ'), ('three', 'CD'), ('vision', 'NN'), ('india', 'NN'), ('.', '.')]"
+      ]
+     },
+     "execution_count": 355,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.pos_tag(sentences[0].split())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53a57fbb-d953-4363-b8a7-736a6e5803c3",
+   "id": "ca774193-2a04-4208-be80-1acfc5e7a5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e16b1c00-2ea4-48f6-9071-c96fee3c88fa",
    "metadata": {},
    "outputs": [],
    "source": []
